--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Babel config in node module",
 	"main": "babel-config-react.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Warning: this package comes without tests\" && exit 0"
 	},
 	"repository": {
 		"type": "git",
