fix(ver): lets use semantic-version module to manage releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
+node_js: 8
 deploy:
   email: artkor@live.ru
-  provider: npm
+  provider: script
   api_key:
     secure: $NPM_TOKEN
+  script:
+    - npx semantic-release
