--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js: 8
 deploy:
   email: artkor@live.ru
   provider: script
+  skip_cleanup: true
   api_key:
     secure: $NPM_TOKEN
   script:
