fix(travis): github key added to travis ci, so lets test it

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"eslint",
 		"prettier",
 		"react",
-		"graphql"
+		"graphql",
+		"es2018"
 	],
 	"author": "Artem Korolev",
 	"license": "MIT",
